--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,10 @@ header {
 
 .header__img--wrapper {
   padding: 20px;
+
+  /* Added this after the tutorial to 
+  show it over the wave on larger screens */
+  z-index: 100;
 }
 
 .container {
